# src/types/schemas/base.response.ts
@@ -1,3 +1,12 @@
 export type NoContent = {
   delete: string;
 };
+
+enum OrderE {
+  Desc = "desc",
+  Asc = "asc",
+}
+
+export interface QueryParams {
+  sort?: OrderE;
+}
